# Fontview-Dual

./: INSTALL  README.md  installfv.sh
resource/: meson.linux  meson.termux
resource/src/: fontview-dual  fontview-dual.desktop  fontviewA.c  fontviewB.c  fvsize-1.c  fvsize-2.c  fvsize-3.c  fvsize-4.c  fvsize-5.c  fvsize-6.c  fvsize-7.c  meson.build  postinstall-linux.sh  postinstall-termux.sh  sushi-font-widget.c
